Trying to prevent browser from asking to copy etc. on mobile

--- a/css/rotatingcard.css
+++ b/css/rotatingcard.css
@@ -7,8 +7,12 @@ body {
 }
 /* To stop the browser asking you to copy/save/select the image or whatever. */
 .hover {
--webkit-user-select: none;
 -webkit-touch-callout: none;
+-webkit-user-select: none;
+-khtml-user-select: none;
+-moz-user-select: none;
+-ms-user-select: none;
+user-select: none;
 }
 
 .btn:hover,
